2018-12-12  Ben Elliston  <bje@gnu.org>

	* doc/dejagnu.texi: Acknowledge contributions to the manual from
	others.

2018-12-11  Jacob Bachmeyer  <jcb62281@gmail.com>

	* testsuite/runtest.all/libs.exp: Use "testsuite file" command.
	* testsuite/runtest.all/load_lib.exp: Likewise.
	* testsuite/runtest.all/stats.exp: Likewise.

	* testsuite/runtest.all/stats.exp: Write local init file as
	"stats-init.exp" for status summary tests.  Use --local_init
	option to runtest to load that file instead of site.exp and move
	the inner test module to a nested testsuite.
	* testsuite/runtest.all/stats-sub.exp: Move file from here ..
	* testsuite/runtest.all/stats/testsuite/stat.test/stats-sub.exp:
	.. to here.

	* testsuite/runtest.all/options.exp: Clean up whitespace in file.
	Wrap lines in test list and move short items to beginning of list.
	Write local init file as "options-init.exp" for options tests.
	Use --local_init option with nested runtest to load that file
	instead of site.exp; also create an empty nested testsuite.  Local
	init file arranges for inner runtest processes to run in a
	subdirectory in the object tree to eliminate filename clashes.
	Set tmpdir if not already set and remove entire temporary
	directory after running options tests.
	* testsuite/runtest.all/options/testsuite/null.test/null.exp: New.

	* testsuite/runtest.all/clone_output.test: Move from here ..
	* testsuite/runtest.libs/clone_output.test: .. to here.
	* testsuite/runtest.all/config.test: Move from here ..
	* testsuite/runtest.libs/config.test: .. to here.
	* testsuite/runtest.all/default_procs.tcl: Move from here ..
	* testsuite/runtest.libs/default_procs.tcl: .. to here.
	* testsuite/runtest.all/libs.exp: Move from here ..
	* testsuite/runtest.libs/libs.exp: .. to here.
	* testsuite/runtest.all/load_lib.exp: Move from here ..
	* testsuite/runtest.libs/load_lib.exp: .. to here.
	* testsuite/runtest.all/remote.test: Move from here ..
	* testsuite/runtest.libs/remote.test: .. to here.